First round automatic fixes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,23 @@
-fail_fast: false
 repos:
   - repo: https://github.com/pocc/pre-commit-hooks
     rev: v1.3.5
     hooks:
       - id: clang-format
-        args: [--style=GNU]
+        args: ["-i", "--style=GNU"]
       - id: clang-tidy
-        args: [--fix-errors]
+        args: ["--fix-errors"]
       - id: oclint
-      - id: uncrustify
       - id: cppcheck
       - id: cpplint
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+    - id: trailing-whitespace
+    - id: end-of-file-fixer
+    - id: check-yaml
+    - id: check-symlinks
+    - id: check-merge-conflict
+    - id: check-json
+    - id: check-added-large-files
+      args: [--maxkb=51200]
